--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "express-ejs-layouts": "^2.5.1",
+    "method-override": "^3.0.0",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1"
   },
   "dependencies": {
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "mongoose": "^6.2.5"
   }
