--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
     "prettier": "2.5.1"
   },
   "dependencies": {
+    "country-list-js": "^3.1.7",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "mongoose": "^6.2.5"
+    "express-fileupload": "^1.3.1",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
+    "fs-extra": "^10.0.1",
+    "mongoose": "^6.2.5",
+    "resize-img": "^2.0.0"
   }
 }
