--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "devDependencies": {
     "express-ejs-layouts": "^2.5.1",
     "method-override": "^3.0.0",
+    "mongodb": "^4.4.1",
     "nodemon": "^2.0.15",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "slugify": "^1.6.5"
   },
   "dependencies": {
     "country-list-js": "^3.1.7",
@@ -25,7 +27,6 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "fs-extra": "^10.0.1",
-    "mongoose": "^6.2.5",
-    "resize-img": "^2.0.0"
+    "mongoose": "^6.2.5"
   }
 }
