--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "fs-extra": "^10.0.1",
+    "joi": "^17.6.0",
     "mongoose": "^6.2.5"
   }
 }
