--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
     "slugify": "^1.6.5"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "country-list-js": "^3.1.7",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-fileupload": "^1.3.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "fs-extra": "^10.0.1",
     "joi": "^17.6.0",
-    "mongoose": "^6.2.5"
+    "mongoose": "^6.2.5",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
   }
 }
