--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "country-list-js": "^3.1.7",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-fileupload": "^1.3.1",
-    "express-flash": "0.0.2",
+    "express-messages": "^1.0.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "fs-extra": "^10.0.1",
